# esp-idf

./: .gitmodules  export.sh
components/app_trace/: CMakeLists.txt
components/bootloader_support/src/: esp_image_format.c
components/driver/: gdma.c  gpio.c  i2s.c  sdspi_host.c  spi_common.c  spi_master.c  uart.c
components/esp_eth/src/: esp_eth_mac_w5500.c  esp_eth_phy_w5500.c
components/esp_http_client/: esp_http_client.c
components/esp_hw_support/: Kconfig.spiram.common  component.mk
components/esp_hw_support/test/: test_rtc_clk.c
components/esp_pm/: pm_impl.c
components/esp_psram/: Kconfig.spiram.common
components/esp_system/: startup.c
components/esp_system/ld/: ld.common
components/esp_system/test/: test_sleep.c
components/esp_timer/src/: esp_timer.c
components/esp_wifi/esp32/: esp_adapter.c
components/esp_wifi/esp32c3/: esp_adapter.c
components/fatfs/: CMakeLists.txt
components/fatfs/diskio/: diskio_nand.c  diskio_nand.h
components/fatfs/vfs/: esp_vfs_fat.h  vfs_fat_spinandflash.c
components/freertos/: Kconfig  tasks.c
components/hal/: component.mk
components/heap/: CMakeLists.txt  Kconfig  component.mk  heap_caps.c  multi_heap.c
components/lwip/: CMakeLists.txt  component.mk
components/spi_flash/: cache_utils.c  partition.c
components/spi_nand_flash/: CMakeLists.txt
components/spi_nand_flash/include/: spi_nand_flash.h
components/spi_nand_flash/src/: dhara_glue.c  nand.c  nand.h
components/tcp_transport/: CMakeLists.txt
tools/ci/: test_build_system_cmake.sh
tools/ldgen/: fragments.py  generation.py
(+39 files in other folders)
